Fix webapp so that right hand side never renders below the sidebar.  Note to HTML purists, this fix contains a table!  If you hate tables, patches are welcome, but this patch comes because I yet haven't had a patch and do not pretend to be a CSS wizard when it comes to DIV alignments.

--- a/web/content/style.css
+++ b/web/content/style.css
@@ -117,7 +117,7 @@ div#main {
 }
 
 div#content {
-  float: left;
+  /* float: left; */
   padding: 20px 45px;
 }
 
